--- a/lesson009/index.html
+++ b/lesson009/index.html
@@ -1,5 +1,7 @@
+<!DOCTYPE>
 <html>
   <head>
+    <meta charset="UTF-8" />
     <style>
       .board {
         width: 300px;
@@ -26,6 +28,7 @@
     </style>
   </head>
   <body>
+    <div class="result"></div>
     <div class="board">
       <div id="0" class="piece"></div>
       <div id="1" class="piece"></div>
